# prodevassessments

./: .env.example  .gitignore  README.md  alembic.ini  dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 02acbb77c42c_add_transaction_table.py  59b5b72c42bd_create_account_table.py  5e181739126a_updated_relationship_migration_table.py  ab3699b5255e_create_user_table.py  d0c094378096_create_first_table.py
app/: main.py
app/api/: __init__.py  depends.py
app/api/api_v1/: __init__.py
app/api/api_v1/endpoints/: __init__.py  account_test.py  accounts.py  user.py  user_test.py
app/api/api_v1/endpoints/test_mocks/: __init__.py  accounts_api_mock.py  user_api_mock.py
app/config/: __init__.py  loggers.py  settings.py
app/core/: __init__.py  account_number_generator.py  security.py  security_decorators.py  transaction_operations.py
app/crud/: __init__.py  base.py  crud_account.py  crud_transaction.py  crud_user.py
app/db/: __init__.py  base.py  base_class.py  init_db.py  session.py
app/db/test_mocks/: db_test_mock.py
app/models/: __init__.py  account.py  transaction.py  user.py
app/schemas/: __init__.py  account_schema.py  token_schema.py  transaction_schema.py  user_schema.py
